--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="https://cdn5.f-cdn.com/contestentries/157322/13929033/54e3207f255dd_thumb900.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Recipe Apps</title>
   </head>
   <body>
     <div id="root"></div>
